--- a/client/clienttest/src/main/webapp/css/ex30_position.html
+++ b/client/clienttest/src/main/webapp/css/ex30_position.html
@@ -26,18 +26,26 @@
             2. position: absolute;
                 - 절대 좌표
                 - left, top > 좌표 지정
-                - 문서의 좌측 상단을 원점으로 한다.
-                - 원래 자신의 공간은 사라진다.
+                - 문서의 좌측 상단을 원점으로 한다.(X) 
+                    > 자신의 직계 조상 중 가장 처음으로 만나는 position이 static이 아닌 태그를 원점으로 한다(O)(**)
+                - 원래 자신의 공간은 사라진다.(**)
                 
             3. position: relative;
                 - 상대 좌표
                 - left, top > 좌표 지정
-                - 자신의 원래 위치를 원점으로 한다.
-                - 원래 자신의 공간은 사라지지 않는다.
+                - 자신의 원래 위치를 원점으로 한다.(**)
+                - 원래 자신의 공간은 사라지지 않는다.(**)
 
             4. position: fixed;
+                - 고정 좌표
+                - left, top > 좌표 지정
+                - 브라우저의 좌측 상단을 원점으로 한다.(**)
+                - 원래 자신의 공간은 사라진다.(**)
 
             5. position: sticky;
+                - left, top > 좌표 지정
+                - 자신의 영역이 보일 때 > static(원래 자리)
+                - 자신의 영역이 안보일 때 > 상단 고정
         */
 
         .box {
@@ -51,7 +59,42 @@
         #box3 { background-color: cornflowerblue; }
 
         #box2 {
-            position: relative;
+            /* position: relative;
+            left: 0px;
+            top: 0px; */
+            position: sticky;
+            left: 0px;
+            top: 0px;
+        }
+        body {
+            margin: 20px;
+            padding: 20px;
+        }
+
+        #b1, #b2, #b3 { border: 5px solid black; }
+        #b1 {
+            width: 500px;
+            height: 400px;
+            background-color: tomato;
+
+            position: absolute;
+            left: 300px;
+            top: 100px;
+        }
+        #b2 {
+            width: 400px;
+            height: 300px;
+            background-color: gold;
+
+            /* position: absolute;
+            left: 300px;
+            top: 100px; */
+        }
+        #b3 {
+            width: 300px;
+            height: 200px;
+            background-color: cornflowerblue;
+            position: absolute;
             left: 0px;
             top: 0px;
         }
@@ -61,9 +104,24 @@
     <!-- ex30_position.html -->
     <h1>Position</h1>
 
+    <div id="b1">
+        박스1
+        <div id="b2">
+            박스2
+            <div id="b3">박스3</div>
+        </div>
+    </div>
+
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium iusto totam beatae ut, reprehenderit velit delectus iste placeat praesentium dolorem, a exercitationem inventore optio doloribus dolore nulla quibusdam? Ipsa voluptatum distinctio eos nam, expedita cumque reprehenderit, quis aspernatur atque consequuntur sapiente rerum repellat nulla! Culpa, consequuntur voluptas iure molestias non velit tempora ratione facere? Voluptate repellat consequuntur in labore blanditiis unde assumenda iusto, nesciunt reprehenderit perspiciatis porro ut fugiat. Maxime placeat fugiat enim nulla consequatur nihil iure non aliquam architecto expedita, reprehenderit, quidem nam distinctio nisi culpa, facere commodi dolor voluptatibus perferendis tenetur dicta qui. Veniam quos, rem officiis ullam beatae distinctio sequi accusantium sapiente natus quia recusandae, hic modi suscipit, mollitia assumenda placeat eos voluptates? Dolor pariatur sapiente repudiandae adipisci fuga molestias, nobis in officiis sed nihil voluptatibus provident fugiat consequuntur commodi, sequi deserunt ad! Culpa totam tempora vero corporis nemo expedita laudantium enim quisquam illum, maxime at, earum hic perferendis! Tenetur, inventore? Reiciendis tempore atque praesentium magnam facere veniam possimus aliquid sequi ipsam, cupiditate culpa magni molestiae laborum labore ab earum, accusamus, architecto eligendi est dolore obcaecati. Quas nam perferendis eius, atque exercitationem incidunt ab suscipit quae quasi assumenda. Consequuntur odio quasi totam commodi. Voluptatem atque, magni laborum maiores magnam corrupti nostrum illo? Aspernatur, doloremque alias totam omnis quibusdam tempore illum quaerat in quod illo et deleniti ad iure autem. Obcaecati quisquam voluptatibus accusamus eaque voluptas eligendi, delectus fugiat non numquam adipisci deleniti, voluptatem veritatis recusandae reprehenderit tempora, harum quas ut ea unde repellendus vitae quidem molestias! Quam tenetur eveniet illum similique assumenda atque voluptatibus rerum, ipsa quae aliquam sint ipsam numquam delectus dicta commodi nihil adipisci exercitationem. Explicabo aut laborum est optio ab blanditiis quasi, quam sint voluptatem quos commodi repellat accusamus nisi perspiciatis quas, rem voluptate cum eaque ut quod! Quam voluptas ipsam ducimus. Quas odio quasi dolor earum, harum aperiam quae at eaque eius officia vel nesciunt illo deleniti explicabo ad exercitationem est. Eligendi omnis recusandae, dignissimos aut illum blanditiis odit corporis minima temporibus qui, nobis aspernatur earum tenetur esse ea alias cum aliquid enim, magnam sequi voluptas dolorum sunt voluptatem. Doloribus quas non, at repudiandae reprehenderit necessitatibus debitis voluptatum dolor consectetur voluptatibus illum deserunt nemo quibusdam ipsa consequatur totam facilis eos explicabo neque minima obcaecati ratione aliquid eaque. Dolorum dicta voluptatem, culpa eligendi provident ea impedit neque minima reiciendis! Delectus repellendus animi eaque ipsam molestiae sequi mollitia, illum magnam, suscipit esse quam dolor harum autem accusamus officia ut. Iusto odit quas nisi quasi accusantium alias voluptatum suscipit vero dolorum, impedit exercitationem, quae officia nihil dolore minus iste id facere obcaecati ratione doloribus tenetur provident sint? Fugiat, nesciunt optio! Nemo consequatur numquam laboriosam adipisci, pariatur deleniti deserunt dolorem optio minima consequuntur. Ea tenetur culpa magnam fugiat doloremque earum quia voluptas, voluptatem perferendis odio itaque ex repellat modi facilis accusantium ratione adipisci consequatur! Nulla laudantium quasi ad nihil illo natus? Accusamus similique repellat ullam ad quos. Qui nulla impedit modi eos necessitatibus officia aspernatur reiciendis vitae laudantium architecto? Necessitatibus eos, inventore rerum adipisci excepturi porro dicta.
+    </p>
+
     <!-- #box$.box{상자$}*3 -->
     <div id="box1" class="box">상자1</div>
     <div id="box2" class="box">상자2</div>
     <div id="box3" class="box">상자3</div>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium iusto totam beatae ut, reprehenderit velit delectus iste placeat praesentium dolorem, a exercitationem inventore optio doloribus dolore nulla quibusdam? Ipsa voluptatum distinctio eos nam, expedita cumque reprehenderit, quis aspernatur atque consequuntur sapiente rerum repellat nulla! Culpa, consequuntur voluptas iure molestias non velit tempora ratione facere? Voluptate repellat consequuntur in labore blanditiis unde assumenda iusto, nesciunt reprehenderit perspiciatis porro ut fugiat. Maxime placeat fugiat enim nulla consequatur nihil iure non aliquam architecto expedita, reprehenderit, quidem nam distinctio nisi culpa, facere commodi dolor voluptatibus perferendis tenetur dicta qui. Veniam quos, rem officiis ullam beatae distinctio sequi accusantium sapiente natus quia recusandae, hic modi suscipit, mollitia assumenda placeat eos voluptates? Dolor pariatur sapiente repudiandae adipisci fuga molestias, nobis in officiis sed nihil voluptatibus provident fugiat consequuntur commodi, sequi deserunt ad! Culpa totam tempora vero corporis nemo expedita laudantium enim quisquam illum, maxime at, earum hic perferendis! Tenetur, inventore? Reiciendis tempore atque praesentium magnam facere veniam possimus aliquid sequi ipsam, cupiditate culpa magni molestiae laborum labore ab earum, accusamus, architecto eligendi est dolore obcaecati. Quas nam perferendis eius, atque exercitationem incidunt ab suscipit quae quasi assumenda. Consequuntur odio quasi totam commodi. Voluptatem atque, magni laborum maiores magnam corrupti nostrum illo? Aspernatur, doloremque alias totam omnis quibusdam tempore illum quaerat in quod illo et deleniti ad iure autem. Obcaecati quisquam voluptatibus accusamus eaque voluptas eligendi, delectus fugiat non numquam adipisci deleniti, voluptatem veritatis recusandae reprehenderit tempora, harum quas ut ea unde repellendus vitae quidem molestias! Quam tenetur eveniet illum similique assumenda atque voluptatibus rerum, ipsa quae aliquam sint ipsam numquam delectus dicta commodi nihil adipisci exercitationem. Explicabo aut laborum est optio ab blanditiis quasi, quam sint voluptatem quos commodi repellat accusamus nisi perspiciatis quas, rem voluptate cum eaque ut quod! Quam voluptas ipsam ducimus. Quas odio quasi dolor earum, harum aperiam quae at eaque eius officia vel nesciunt illo deleniti explicabo ad exercitationem est. Eligendi omnis recusandae, dignissimos aut illum blanditiis odit corporis minima temporibus qui, nobis aspernatur earum tenetur esse ea alias cum aliquid enim, magnam sequi voluptas dolorum sunt voluptatem. Doloribus quas non, at repudiandae reprehenderit necessitatibus debitis voluptatum dolor consectetur voluptatibus illum deserunt nemo quibusdam ipsa consequatur totam facilis eos explicabo neque minima obcaecati ratione aliquid eaque. Dolorum dicta voluptatem, culpa eligendi provident ea impedit neque minima reiciendis! Delectus repellendus animi eaque ipsam molestiae sequi mollitia, illum magnam, suscipit esse quam dolor harum autem accusamus officia ut. Iusto odit quas nisi quasi accusantium alias voluptatum suscipit vero dolorum, impedit exercitationem, quae officia nihil dolore minus iste id facere obcaecati ratione doloribus tenetur provident sint? Fugiat, nesciunt optio! Nemo consequatur numquam laboriosam adipisci, pariatur deleniti deserunt dolorem optio minima consequuntur. Ea tenetur culpa magnam fugiat doloremque earum quia voluptas, voluptatem perferendis odio itaque ex repellat modi facilis accusantium ratione adipisci consequatur! Nulla laudantium quasi ad nihil illo natus? Accusamus similique repellat ullam ad quos. Qui nulla impedit modi eos necessitatibus officia aspernatur reiciendis vitae laudantium architecto? Necessitatibus eos, inventore rerum adipisci excepturi porro dicta.
+    </p>
 </body>
 </html>
