--- a/client/clienttest/src/main/webapp/css/ex53_animation.html
+++ b/client/clienttest/src/main/webapp/css/ex53_animation.html
@@ -43,7 +43,7 @@
             animation-fill-mode: forwards;
 
             /* 기본값 */
-            animation-timing-function: ease;
+            animation-timing-function: ease-in;
             animation-delay: .4s;
             animation-iteration-count: 3;
             /* animation-iteration-count: infinite; */
