--- a/client/clienttest/src/main/webapp/css/answer/Q013.html
+++ b/client/clienttest/src/main/webapp/css/answer/Q013.html
@@ -57,7 +57,8 @@
         }
 
         #content > div:nth-child(7) {
-            background-color: plum;
+            background-color: violet;
+            animation-duration: .848s;
         }
         
         @keyframes bounce {
