--- a/client/clienttest/src/main/webapp/javascript/ex04_datatype.html
+++ b/client/clienttest/src/main/webapp/javascript/ex04_datatype.html
@@ -24,11 +24,11 @@
                 - JavaScript에는 클래스가 없다.
                 - 객체 지향 언어(OOP) <> 자바스크립트
                 - 객체 기반 언어 == 자바스크립트
-                ex. null
 
             5. 기타(상수)
-                a. undefined
-                b. NaN(Not a number)
+                a. null > but. typeof로 확인하면 object(버그)로 나오지만 고유자료형
+                b. undefined
+                c. NaN(Not a number)
 
 
             변수, 상수(리터럴)
