--- a/client/clienttest/src/main/webapp/javascript/answer/Q007.html
+++ b/client/clienttest/src/main/webapp/javascript/answer/Q007.html
@@ -23,14 +23,19 @@
             grid-template-rows: repeat(3, 1fr);
             width: 500px;
             height: 500px;
+            align-items: center;
         }
 
         #key img {
             border: 10px solid #A9A9A9;
+            display: flex;
+            justify-self: center;
         }
 
         #btn {
             width: 520px;
+            display: flex;
+            justify-content: space-between;
         }
 
         #btn input {
@@ -62,5 +67,9 @@
             <input type="button" value="INPUT">
         </section>
     </div>
+
+    <script>
+        var num = 1;
+    </script>
 </body>
 </html>
